name:                purebbs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CodeHz/purebbs#readme
license:             BSD3
license-file:        LICENSE
author:              CodeHz
maintainer:          CodeHz@outlook.com
copyright:           2017 CodeHz
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Api, Model
  other-modules:       Auth
                     , AuthMiddleware
                     , Utils
                     , ArticleType
                     , MessageItem
                     , FollowType
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , aeson
                     , bytestring
                     , base64-bytestring
                     , SHA
                     , time
                     , mtl
                     , text
                     , vault
                     , word8
                     , either
                     , wai
                     , wai-extra
                     , http-types
                     , monad-logger
                     , transformers
  default-language:    Haskell2010

executable purebbs-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , mtl
                     , purebbs
  default-language:    Haskell2010

test-suite purebbs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , purebbs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CodeHz/purebbs
